[gd_scene load_steps=14 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://aldaGod.tscn" type="PackedScene" id=2]
[ext_resource path="res://lifebar.tscn" type="PackedScene" id=3]
[ext_resource path="res://pausa.tscn" type="PackedScene" id=4]
[ext_resource path="res://lifebarboss.tscn" type="PackedScene" id=5]
[ext_resource path="res://lifebaraldawon.tscn" type="PackedScene" id=6]
[ext_resource path="res://lifebarvitto.tscn" type="PackedScene" id=7]
[ext_resource path="res://lifebarpony.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sprites/barra vida/label_bg.png" type="Texture" id=9]
[ext_resource path="res://musica/aldasong.mp3" type="AudioStream" id=10]
[ext_resource path="res://aldawonEscena.gd" type="Script" id=11]
[ext_resource path="res://TransitionScene.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]

[node name="Node" type="Node"]
script = ExtResource( 11 )

[node name="topo" parent="." instance=ExtResource( 1 )]
position = Vector2( 83.8032, 536.285 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 1144.65, 547.547 )

[node name="techo" type="Sprite" parent="."]
position = Vector2( 649.137, 9.45229 )
scale = Vector2( 11.5957, 0.938875 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="techo"]
position = Vector2( -0.826123, -0.915044 )
scale = Vector2( 5.55732, 2.04358 )
collision_layer = 8
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="techo/StaticBody2D"]
shape = SubResource( 1 )

[node name="wall2" type="Sprite" parent="."]
position = Vector2( 1278.23, 194.624 )
rotation = 1.5708
scale = Vector2( 11.5846, 1.08397 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="wall2"]
position = Vector2( -0.826123, -0.915044 )
scale = Vector2( 5.55732, 2.04358 )
collision_layer = 8
collision_mask = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall2/StaticBody2D"]
shape = SubResource( 1 )

[node name="piso" type="Sprite" parent="."]
position = Vector2( 634.6, 716.52 )
rotation = 3.14159
scale = Vector2( 11.5846, 0.965544 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="piso"]
position = Vector2( -0.826123, -0.915044 )
scale = Vector2( 5.55732, 2.04358 )
collision_layer = 8
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="piso/StaticBody2D"]
shape = SubResource( 1 )

[node name="wall4" type="Sprite" parent="."]
position = Vector2( -5.97547, 183.297 )
rotation = 4.71239
scale = Vector2( 11.5846, 0.880838 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="wall4"]
position = Vector2( -0.826123, -0.915044 )
scale = Vector2( 5.55732, 2.04358 )
collision_layer = 8
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall4/StaticBody2D"]
shape = SubResource( 1 )

[node name="pausa" parent="." instance=ExtResource( 4 )]
visible = false

[node name="interfaz" parent="." instance=ExtResource( 3 )]
margin_top = 2.11893
margin_bottom = 2.1189

[node name="Control" parent="." instance=ExtResource( 5 )]
visible = false
margin_left = -49.1116
margin_top = 43.7764
margin_right = -49.1116
margin_bottom = 43.7764

[node name="lifebaraldawon" parent="." instance=ExtResource( 6 )]
margin_left = 1180.24
margin_top = 38.1407
margin_right = 1220.24
margin_bottom = 78.1407

[node name="lifebarvitto" parent="." instance=ExtResource( 7 )]
visible = false
margin_left = 1182.36
margin_top = 38.1407
margin_right = 1222.36
margin_bottom = 78.1407

[node name="lifebarpony" parent="." instance=ExtResource( 8 )]
visible = false
margin_left = 1169.65
margin_top = 42.3785
margin_right = 1209.65
margin_bottom = 82.3785

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="TransitionScreen" parent="." instance=ExtResource( 12 )]

[connection signal="cambiovida" from="topo" to="interfaz" method="_on_topo_cambiovida"]
[connection signal="player_is_dead" from="topo" to="." method="_on_topo_player_is_dead"]
[connection signal="cambiovida" from="KinematicBody2D" to="lifebaraldawon" method="_on_KinematicBody2D_cambiovida"]
[connection signal="muerto" from="KinematicBody2D" to="." method="_on_KinematicBody2D_muerto"]
[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
